--- a/temas.css
+++ b/temas.css
@@ -1,7 +1,7 @@
 .contenedor{
 
 width: 100%;
-height: 1000px;
+height: 4000px;
 background-color: darkorchid;
 display: flex;
 flex-direction: column;
@@ -37,6 +37,36 @@ font-family: cursive;
 
 
 
+
+
+
+
+}
+
+.titulo2{
+
+    width: 100%;
+    height: 150px;
+    background-color: rgb(15, 187, 87);
+    font-size: 100px;
+    font-family: 'Times New Roman', Times, serif;
+
+
+
+
+
+
+
+}
+
+.texto1{
+
+
+    width: 100%;
+    height: 150px;
+    background-color: rgb(15, 187, 87);
+    font-size: 50px;
+    font-family: fantasy;
 
 
 
