--- a/temas.css
+++ b/temas.css
@@ -63,10 +63,69 @@ font-family: cursive;
 
 
     width: 100%;
-    height: 150px;
+    height: 420px;
     background-color: rgb(15, 187, 87);
     font-size: 50px;
     font-family: fantasy;
+
+
+
+
+}
+
+.titulo3{
+
+    width: 100%;
+    height: 250px;
+    background-color: rgb(15, 187, 87);
+    font-size: 100px;
+    font-family: 'Times New Roman', Times, serif;
+
+
+
+
+
+}
+
+.texto2{
+
+   
+
+    width: 100%;
+    height: 425px;
+    background-color: rgb(15, 187, 87);
+    font-size: 50px;
+    font-family: fantasy;
+
+
+
+
+
+}
+
+
+.titulo4{
+
+    width: 100%;
+    height: 250px;
+    background-color: rgb(15, 187, 87);
+    font-size: 100px;
+    font-family: 'Times New Roman', Times, serif;
+
+
+
+
+}
+
+.texto3{
+
+    width: 100%;
+    height: 425px;
+    background-color: rgb(15, 187, 87);
+    font-size: 50px;
+    font-family: fantasy;
+
+
 
 
 
